src/main/gen/org/c3lang/intellijplugin/parser/C3Parser.java
// This is a generated file. Not intended for manual editing.
package org.c3lang.intellijplugin.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.c3lang.intellijplugin.parser.psi.C3Types.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class C3Parser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return translation_unit(b, l + 1);
  }

  /* ********************************************************** */
  // TYPE_IDENT | IDENT
  public static boolean Symbol(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Symbol")) return false;
    if (!nextTokenIs(b, "<symbol>", IDENT, TYPE_IDENT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, SYMBOL, "<symbol>");
    r = consumeToken(b, TYPE_IDENT);
    if (!r) r = consumeToken(b, IDENT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // bit_expression (additive_op bit_expression)*
  public static boolean additive_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADDITIVE_EXPRESSION, "<additive expression>");
    r = bit_expression(b, l + 1);
    r = r && additive_expression_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (additive_op bit_expression)*
  private static boolean additive_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expression_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!additive_expression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "additive_expression_1", c)) break;
    }
    return true;
  }

  // additive_op bit_expression
  private static boolean additive_expression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = additive_op(b, l + 1);
    r = r && bit_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ADD_OP | ADD_MOD_OP | SUB_OP | SUB_MOD_OP
  public static boolean additive_op(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_op")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADDITIVE_OP, "<additive op>");
    r = consumeToken(b, ADD_OP);
    if (!r) r = consumeToken(b, ADD_MOD_OP);
    if (!r) r = consumeToken(b, SUB_OP);
    if (!r) r = consumeToken(b, SUB_MOD_OP);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // expression (COMMA expression)*
  public static boolean argument_expression_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_expression_list")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENT_EXPRESSION_LIST, "<argument expression list>");
    r = expression(b, l + 1);
    r = r && argument_expression_list_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (COMMA expression)*
  private static boolean argument_expression_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_expression_list_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!argument_expression_list_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "argument_expression_list_1", c)) break;
    }
    return true;
  }

  // COMMA expression
  private static boolean argument_expression_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_expression_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // unary_expression ((EQ initializer_list) | (assignment_op error_expression))+
  public static boolean assignment_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT_EXPRESSION, "<assignment expression>");
    r = unary_expression(b, l + 1);
    r = r && assignment_expression_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ((EQ initializer_list) | (assignment_op error_expression))+
  private static boolean assignment_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_expression_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = assignment_expression_1_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!assignment_expression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "assignment_expression_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // (EQ initializer_list) | (assignment_op error_expression)
  private static boolean assignment_expression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_expression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = assignment_expression_1_0_0(b, l + 1);
    if (!r) r = assignment_expression_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // EQ initializer_list
  private static boolean assignment_expression_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_expression_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQ);
    r = r && initializer_list(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // assignment_op error_expression
  private static boolean assignment_expression_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_expression_1_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = assignment_op(b, l + 1);
    r = r && error_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // EQ
  //     | MUL_ASSIGN
  //     | MUL_MOD_ASSIGN
  //     | DIV_ASSIGN
  //     | ADD_ASSIGN
  //     | ADD_MOD_ASSIGN
  //     | SUB_ASSIGN
  //     | SUB_MOD_ASSIGN
  //     | SHR_ASSIGN
  //     | SHL_ASSIGN
  //     | AND_ASSIGN
  //     | XOR_ASSIGN
  //     | OR_ASSIGN
  public static boolean assignment_op(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_op")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT_OP, "<assignment op>");
    r = consumeToken(b, EQ);
    if (!r) r = consumeToken(b, MUL_ASSIGN);
    if (!r) r = consumeToken(b, MUL_MOD_ASSIGN);
    if (!r) r = consumeToken(b, DIV_ASSIGN);
    if (!r) r = consumeToken(b, ADD_ASSIGN);
    if (!r) r = consumeToken(b, ADD_MOD_ASSIGN);
    if (!r) r = consumeToken(b, SUB_ASSIGN);
    if (!r) r = consumeToken(b, SUB_MOD_ASSIGN);
    if (!r) r = consumeToken(b, SHR_ASSIGN);
    if (!r) r = consumeToken(b, SHL_ASSIGN);
    if (!r) r = consumeToken(b, AND_ASSIGN);
    if (!r) r = consumeToken(b, XOR_ASSIGN);
    if (!r) r = consumeToken(b, OR_ASSIGN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // VOID_KW
  //     | BOOL_KW
  //     | integer_type
  //     | float_type
  //     | Symbol (SCOPE Symbol)*
  //     | TYPE_IDENT
  //     | CT_TYPE_IDENT
  public static boolean base_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_type")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BASE_TYPE, "<base type>");
    r = consumeToken(b, VOID_KW);
    if (!r) r = consumeToken(b, BOOL_KW);
    if (!r) r = integer_type(b, l + 1);
    if (!r) r = float_type(b, l + 1);
    if (!r) r = base_type_4(b, l + 1);
    if (!r) r = consumeToken(b, TYPE_IDENT);
    if (!r) r = consumeToken(b, CT_TYPE_IDENT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // Symbol (SCOPE Symbol)*
  private static boolean base_type_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_type_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Symbol(b, l + 1);
    r = r && base_type_4_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (SCOPE Symbol)*
  private static boolean base_type_4_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_type_4_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!base_type_4_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "base_type_4_1", c)) break;
    }
    return true;
  }

  // SCOPE Symbol
  private static boolean base_type_4_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_type_4_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SCOPE);
    r = r && Symbol(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // shift_expression (bit_op shift_expression)*
  public static boolean bit_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bit_expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BIT_EXPRESSION, "<bit expression>");
    r = shift_expression(b, l + 1);
    r = r && bit_expression_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (bit_op shift_expression)*
  private static boolean bit_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bit_expression_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!bit_expression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "bit_expression_1", c)) break;
    }
    return true;
  }

  // bit_op shift_expression
  private static boolean bit_expression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bit_expression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = bit_op(b, l + 1);
    r = r && shift_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // AMP | BIT_XOR_OP | BIT_OR_OP
  public static boolean bit_op(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bit_op")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BIT_OP, "<bit op>");
    r = consumeToken(b, AMP);
    if (!r) r = consumeToken(b, BIT_XOR_OP);
    if (!r) r = consumeToken(b, BIT_OR_OP);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // CATCH_KW LP expression RP defer_catch_body
  public static boolean catch_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "catch_statement")) return false;
    if (!nextTokenIs(b, CATCH_KW)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CATCH_KW, LP);
    r = r && expression(b, l + 1);
    r = r && consumeToken(b, RP);
    r = r && defer_catch_body(b, l + 1);
    exit_section_(b, m, CATCH_STATEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // LBR statement_list? RBR
  public static boolean compound_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compound_statement")) return false;
    if (!nextTokenIs(b, LBR)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, COMPOUND_STATEMENT, null);
    r = consumeToken(b, LBR);
    p = r; // pin = 1
    r = r && report_error_(b, compound_statement_1(b, l + 1));
    r = p && consumeToken(b, RBR) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // statement_list?
  private static boolean compound_statement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compound_statement_1")) return false;
    statement_list(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // ct_if top_level_block tl_ct_else_body?
  //     | ct_switch LBR tl_ct_switch_body RBR
  public static boolean conditional_compilation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_compilation")) return false;
    if (!nextTokenIs(b, "<conditional compilation>", CTIF_KW, CTSWITCH_KW)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONDITIONAL_COMPILATION, "<conditional compilation>");
    r = conditional_compilation_0(b, l + 1);
    if (!r) r = conditional_compilation_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ct_if top_level_block tl_ct_else_body?
  private static boolean conditional_compilation_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_compilation_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ct_if(b, l + 1);
    r = r && top_level_block(b, l + 1);
    r = r && conditional_compilation_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // tl_ct_else_body?
  private static boolean conditional_compilation_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_compilation_0_2")) return false;
    tl_ct_else_body(b, l + 1);
    return true;
  }

  // ct_switch LBR tl_ct_switch_body RBR
  private static boolean conditional_compilation_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_compilation_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ct_switch(b, l + 1);
    r = r && consumeToken(b, LBR);
    r = r && tl_ct_switch_body(b, l + 1);
    r = r && consumeToken(b, RBR);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // logical_expression ((ELVIS | QUESTION expression COLON) logical_expression)*
  public static boolean conditional_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONDITIONAL_EXPRESSION, "<conditional expression>");
    r = logical_expression(b, l + 1);
    r = r && conditional_expression_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ((ELVIS | QUESTION expression COLON) logical_expression)*
  private static boolean conditional_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_expression_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!conditional_expression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "conditional_expression_1", c)) break;
    }
    return true;
  }

  // (ELVIS | QUESTION expression COLON) logical_expression
  private static boolean conditional_expression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_expression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = conditional_expression_1_0_0(b, l + 1);
    r = r && logical_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ELVIS | QUESTION expression COLON
  private static boolean conditional_expression_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_expression_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ELVIS);
    if (!r) r = conditional_expression_1_0_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // QUESTION expression COLON
  private static boolean conditional_expression_1_0_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_expression_1_0_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, QUESTION);
    r = r && expression(b, l + 1);
    r = r && consumeToken(b, COLON);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // CONST_KW (type CONST_IDENT | CT_CONST_IDENT) EQ initializer EOS
  public static boolean const_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_declaration")) return false;
    if (!nextTokenIs(b, CONST_KW)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CONST_KW);
    r = r && const_declaration_1(b, l + 1);
    r = r && consumeToken(b, EQ);
    r = r && initializer(b, l + 1);
    r = r && consumeToken(b, EOS);
    exit_section_(b, m, CONST_DECLARATION, r);
    return r;
  }

  // type CONST_IDENT | CT_CONST_IDENT
  private static boolean const_declaration_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_declaration_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = const_declaration_1_0(b, l + 1);
    if (!r) r = consumeToken(b, CT_CONST_IDENT);
    exit_section_(b, m, null, r);
    return r;
  }

  // type CONST_IDENT
  private static boolean const_declaration_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_declaration_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = type(b, l + 1);
    r = r && consumeToken(b, CONST_IDENT);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // INT_LITERAL
  public static boolean constant(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constant")) return false;
    if (!nextTokenIs(b, INT_LITERAL)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, INT_LITERAL);
    exit_section_(b, m, CONSTANT, r);
    return r;
  }

  /* ********************************************************** */
  // conditional_expression
  public static boolean constant_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constant_expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONSTANT_EXPRESSION, "<constant expression>");
    r = conditional_expression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // CTCASE_KW type_list COLON statement | CTDEFAULT_KW COLON statement
  public static boolean ct_case_stmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ct_case_stmt")) return false;
    if (!nextTokenIs(b, "<ct case stmt>", CTCASE_KW, CTDEFAULT_KW)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CT_CASE_STMT, "<ct case stmt>");
    r = ct_case_stmt_0(b, l + 1);
    if (!r) r = ct_case_stmt_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // CTCASE_KW type_list COLON statement
  private static boolean ct_case_stmt_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ct_case_stmt_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CTCASE_KW);
    r = r && type_list(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && statement(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // CTDEFAULT_KW COLON statement
  private static boolean ct_case_stmt_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ct_case_stmt_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CTDEFAULT_KW, COLON);
    r = r && statement(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // CTELIF_KW LP expression RP
  public static boolean ct_elif(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ct_elif")) return false;
    if (!nextTokenIs(b, CTELIF_KW)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CTELIF_KW, LP);
    r = r && expression(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, m, CT_ELIF, r);
    return r;
  }

  /* ********************************************************** */
  // (ct_elif compound_statement)+
  public static boolean ct_elif_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ct_elif_body")) return false;
    if (!nextTokenIs(b, CTELIF_KW)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ct_elif_body_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!ct_elif_body_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ct_elif_body", c)) break;
    }
    exit_section_(b, m, CT_ELIF_BODY, r);
    return r;
  }
